<resources>
    <string name="app_name">G19_Last Episode</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>



    <string name="seriesName">TV Series Name</string>
    <string name="seriesGenre">What Is The Genre Of This Show?</string>
    <string name="seriesLastEpisode">What Is The Last Episode You Watched?</string>
    <string name="season">Season</string>
    <string name="episode">Episode</string>
    <string name="hintNumber">1</string>
    <string name="isFinished">I watched all the episodes</string>
    <string name="add">Add</string>
    <string name="lastepisodetext">The last episode you watched in this series is season 1, episode 5</string>
    <string name="editSeries">Change Detaıls</string>
    <string name="delete">Delete</string>
    <string name="addNew">Add New TV Series</string>

    <string name="tvName">Friends</string>
    <string name="sNumber">1</string>
    <string name="eNumber">5</string>
    <string name="tvGenre">Comedy</string>
    <string name="showName">TV Series Name</string>
    <string name="showGenre">TV Series Genre</string>

    <string-array name="genres">
        <item>Action</item>
        <item>Anime</item>
        <item>Comedy</item>
        <item>Cartoon</item>
        <item>Crime</item>
        <item>Docuseries</item>
        <item>Drama</item>
        <item>Horror</item>
        <item>Reality</item>
        <item>Romance</item>
        <item>Sci-Fi</item>
        <item>Thriller</item>
    </string-array>
</resources>